--- a/Pragueparking4.0/header.html
+++ b/Pragueparking4.0/header.html
@@ -6,8 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Uddevalla Crew">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-   <link rel="stylesheet" href="css/main.css">
-   <title>PP by Uddevalla Crew</title>
+   <link rel="stylesheet" href="main.css">
+   <title>Kung Fu Rollers</title>
 </head>
 <body>
    <header>
